@@ -22,7 +22,7 @@ extension BlogDetailsViewController {
 
     @objc func showDomainCreditRedemption() {
         let controller = RegisterDomainSuggestionsViewController
-            .instance(site: blog, domainSelectionType: .registerWithPaidPlan, domainPurchasedCallback: { [weak self] domain in
+            .instance(site: blog, domainSelectionType: .registerWithPaidPlan, domainPurchasedCallback: { [weak self] _, domain in
                 WPAnalytics.track(.domainCreditRedemptionSuccess)
                 self?.presentDomainCreditRedemptionSuccess(domain: domain)
             })
