@@ -14,7 +14,7 @@ struct DomainsDashboardFactory {
             domainSelectionType: domainSelectionType,
             includeSupportButton: false)
 
-        viewController.domainPurchasedCallback = { domain in
+        viewController.domainPurchasedCallback = { viewController, domain in
             let blogService = BlogService(coreDataStack: ContextManager.shared)
             blogService.syncBlogAndAllMetadata(blog) { }
             WPAnalytics.track(.domainCreditRedemptionSuccess)
