@@ -3,6 +3,7 @@
 * [*] Blogging Reminders: Disabled prompt for self-hosted sites not connected to Jetpack. [#20970]
 * [**] [internal] Do not save synced blogs if the app has signed out. [#20959]
 * [**] [internal] Make sure synced posts are saved before calling completion block. [#20960]
+* [**] [internal] Fixed an issue that was causing a memory leak in the domain selection flow. [#20813]
 
 
 22.7
